--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ comments: true
   </article>
 
 </div>
-% if page.comments %
+{% if page.comments %}
 <div id="disqus_thread"></div>
 <script>
     /**
@@ -37,4 +37,4 @@ comments: true
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-% endif %
+{% endif %}
