--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,18 +2,17 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
+    <h2 class="footer-heading">
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+          <li>© Javier Salcedo - 2015</li>
           <!--<li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>-->
         </ul>
       </div>
 
       <div class="footer-col  footer-col-2">
-        <ul class="social-media-list">
+        <!--<ul class="social-media-list">
           {% if site.github_username %}
           <li>
             <a href="https://github.com/{{ site.github_username }}">
@@ -42,12 +41,12 @@
             </a>
           </li>
           {% endif %}
-        </ul>
+        </ul>-->
       </div>
 
-      <div class="footer-col  footer-col-3">
+      <!--<div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
-      </div>
+      </div>-->
     </div>
 
   </div>
