--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,9 +44,9 @@
         </ul>-->
       </div>
 
-      <!--<div class="footer-col  footer-col-3">
+      <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
-      </div>-->
+      </div>
     </div>
 
   </div>
